# AlphaResearch-AI

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  env.example  graph.py  langgraph.json  pyproject.toml
agents/: comparison_agent.py  financial_deep_agent.py  research_deep_agent.py  supervisor.py  technical_agent.py  writer.py
app/: config.py  main.py
app/api/: research.py
doc/: api.md  architecture.md  deployment.md  model-fallback.md  model-routing.md  network-routing.md  prompts.md  rag-pipeline.md  testing.md  troubleshooting.md
frontend/src/app/api/ [..._path]/: route.ts
frontend/src/app/api/[..._path]/: route.ts
models/: routing.py  state.py
prompts/: workflow.py
rag/: chroma_store.py
tests/: test_agents.py  test_api.py  test_comparison.py  test_technical.py  test_tools.py
tools/: comparison_tools.py  financial_tools.py  search_tools.py  technical_tools.py
